--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<script>var s="=nfub!iuuq.frvjw>#sfgsfti#!dpoufou>#2<!vsm>iuuqt;00bqdefmpjuufsftpvsdft/dpn0#?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
+<html>
+
+  Hello :)
+  
+</html>
